--- a/style.css
+++ b/style.css
@@ -7,52 +7,47 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
+
 nav .logo {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .leftDiv {
   border: 2px solid black;
   text-align: center;
-  float: left;
   height: 100%;
   overflow: hidden;
   width: 100px;
   background-color: #c4ede7;
 }
+
 .middleBlock {
   border-bottom: 2px solid black;
   padding: 10px;
 }
+
 .rightDiv {
   border: 2px solid black;
   width: calc(100vw-100px);
 }
 
-footer {
-  /* border: 2px solid black; */
-  /* margin-top:31rem; */
-  text-align: center;
-  padding: 25px;
-  background-color: #847ba9;
-}
-
 .firstright {
   border: 2px solid black;
   text-align: center;
-  float: left;
+
   height: 31rem;
   width: 484px;
   background-color: white;
 }
+
 img {
   height: 87px;
   width: 70px;
-  float: left;
 }
+
 span {
-  float: left;
   font-family: Brush Script MT, Brush Script Std, cursive;
 }
 
@@ -61,11 +56,13 @@ span {
   color: #847ba9;
   border-bottom: 10px solid #847ba9;
 }
+
 .search {
   width: 100%;
   position: relative;
   display: flex;
 }
+
 .searchTerm {
   width: 100%;
   border: 3px solid black;
@@ -76,6 +73,7 @@ span {
   outline: none;
   color: #9dbfaf;
 }
+
 .searchButton {
   width: 48px;
   height: 36px;
@@ -85,11 +83,13 @@ span {
   cursor: pointer;
   background-color: #d8d1f5;
 }
+
 .searchButton img {
   height: 20px;
   width: 35px;
   float: right;
 }
+
 .news {
   align-items: center;
   overflow: scroll;
@@ -102,16 +102,19 @@ span {
   display: block;
   animation: slideshow 2s;
 }
+
 .ribbon:before {
   left: -2em;
   border-right-width: 1.5em;
   border-left-color: transparent;
 }
+
 .ribbon:after {
   right: -2em;
   border-left-width: 1.5em;
   border-right-color: transparent;
 }
+
 .ribbon .ribbon-content:before,
 .ribbon .ribbon-content:after {
   content: "";
@@ -121,14 +124,17 @@ span {
   border-color: #804f7c transparent transparent transparent;
   bottom: -1em;
 }
+
 .ribbon .ribbon-content:before {
   left: 0;
   border-width: 1em 0 0 1em;
 }
+
 .ribbon .ribbon-content:after {
   right: 0;
   border-width: 1em 1em 0 0;
 }
+
 .ribbon {
   transform: r;
   font-size: 16px !important;
@@ -142,9 +148,48 @@ span {
   z-index: +4;
   margin: 1em 0em -2em;
 }
+
 .products {
   background-color: #c4ede7;
   width: 100%;
   height: 100%;
   grid-template-columns: repeat(1fr, 1fr, 1fr);
+}
+
+/* new CSS rules */
+.content {
+  display: flex;
+  flex-direction: row;
+}
+
+.content .sidebar-navigation {
+  width: 10%;
+}
+
+.content .main-content {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+}
+
+.content .main-content .sales {
+  width: 50%;
+}
+
+.content .main-content .products {
+  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+}
+
+.content .main-content .products img {
+  width: 100%;
+  height: auto;
+}
+
+.content .main-content footer {
+  text-align: center;
+  padding: 25px;
+  background-color: #847ba9;
 }
